--- a/styles/rtl.css
+++ b/styles/rtl.css
@@ -140,6 +140,7 @@ li li {
 /* Markup styles */
 pre {
   word-wrap: break-word;
+  white-space: pre-wrap;
   background: #f2f2f2;
   padding: 0.75em;
   border: solid 1px #e8e8e8;
